2001-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Made it can be called non-interactively or a batch
	job.

	* w3m.el (w3m-goto-url): Add autoload magic cookie.
	* w3m-weather.el (w3m-about-weather, w3m-weather): Ditto.
	* w3m-search.el (w3m-search): Ditto.
	* w3m-form.el (w3m-fontify-forms, w3m-form-parse-region): Ditto.
	* w3m-filter.el (w3m-filter): Ditto.
	* w3m-dtree.el (w3m-dtree, w3m-about-dtree): Ditto.
	* w3m-bookmark.el (w3m-bookmark-view, w3m-bookmark-add-current-url,
	w3m-bookmark-add-this-url): Ditto.
	* w3m-antenna.el (w3m-antenna, w3m-about-antenna): Ditto.
	* mime-w3m.el (mime-w3m-preview-text/html): Ditto.

2001-05-23  Kazuyoshi KOREEDA   <Kazuyoshi.Koreeda@rdmg.mgcs.mei.co.jp>

	* shimbun/sb-nikkei.el: New file.
	* shimbun/sb-yahoo.el: New file.

2001-05-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-coding-system): Changed default value to
	'iso-2022-7bit-ss2.
	(w3m-terminal-coding-system): New user option.
	(w3m-attributes): When URL whose scheme equals to `about' is
	specified, returns `w3m-coding-system' as its content-charset.
	(w3m-exec-process): Refer `w3m-terminal-coding-system'.
	(w3m-decode-buffer): Decode buffer everywhen it is called.
	(w3m-about-retrieve): New function.
	(w3m-cid-retrieve): Ditto.
	(w3m-retrieve): Call `w3m-about-retrieve' and `w3m-cid-retrieve'.
	(w3m-rendering-region) [w3mmee]: No call `encode-coding-region'.
	Fix coding-system spec error for Mule-2.3.
	(w3m-rendering-region): Simplified.
	(w3m-region) [w3mmee]: Encode this buffer as unibyte
	representation.
	(w3m-about-history): No call `w3m-with-work-buffer'.
	(w3m-about-db-history): Ditto.

	* w3m-dtree.el (w3m-about-dtree): Ditto.

	* w3m-weather.el (w3m-about-weather): Call `w3m-decode-buffer'.

2001-05-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Popup a new frame if there is neither a window nor
	a frame associated with w3m and `w3m-pop-up-frames' is non-nil;