@@ -1,3 +1,8 @@
+2001-05-24  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* w3m.el (toplevel): Define make-ccl-coding-system() myself, when
+	failed (require 'pccl). 
+
 2001-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m): Made it can be called non-interactively or a batch
